# laba_1

./: .gitignore  123  README.md
laba_1.1/: main.cpp
laba_10/: main.cpp
laba_2.1/: main.cpp
laba_2.2/: CMakeLists.txt  main.cpp
laba_3/: main.cpp
laba_4/#1/: main.cpp
laba_4/#2/: main.cpp
laba_4/#3/: main.cpp
laba_5/#1/: main.cpp
laba_5/#2/: main.cpp
laba_6/#1/: main.cpp
laba_6/#2/: main.cpp
laba_6/#3/: main.cpp
laba_6/#4/: main.cpp
laba_7/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
laba_8/#1/: main.cpp
laba_8/#2/: main.cpp
laba_8/#3/: main.cpp
laba_9/: main.cpp
